# cpp-file-data-format-libs-test

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: file_storage_format.hpp  main.cpp  person.cpp  person.hpp  person_file_storage.hpp  person_json_file_storage.cpp  person_json_file_storage.hpp  person_xml_file_storage.cpp  person_xml_file_storage.hpp
libs/: CMakeLists.txt
libs/RapidXML/: CMakeLists.txt
libs/json/: CMakeLists.txt
libs/pugixml/: CMakeLists.txt
